--- a/sources/VeloCity.Wpf.Presentation.Styles/CustomControls/OfficialHolidayAbsenceControlStyles.xaml
+++ b/sources/VeloCity.Wpf.Presentation.Styles/CustomControls/OfficialHolidayAbsenceControlStyles.xaml
@@ -36,57 +36,52 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type customControls:OfficialHolidayAbsenceControl}">
-                    <Grid>
+                    <DockPanel>
 
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="Auto" />
-                            <ColumnDefinition Width="*" />
-                        </Grid.ColumnDefinitions>
+                        <Grid DockPanel.Dock="Top">
 
-                        <Grid.RowDefinitions>
-                            <RowDefinition />
-                            <RowDefinition />
-                        </Grid.RowDefinitions>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="Auto" />
+                                <ColumnDefinition Width="*" />
+                                <ColumnDefinition Width="Auto" />
+                            </Grid.ColumnDefinitions>
 
-                        <customControls:GenericIcon
-                            Grid.Row="0"
-                            Grid.Column="0"
-                            Style="{StaticResource FourDotsIconStyle}"
-                            Width="12"
-                            Height="12"
-                            Margin="0 0 10 0"
-                            Foreground="{StaticResource SprintCalendarInfoIconBrush}" />
+                            <customControls:GenericIcon
+                                Grid.Column="0"
+                                Style="{StaticResource FourDotsIconStyle}"
+                                Width="12"
+                                Height="12"
+                                Margin="0 0 10 0"
+                                Foreground="{StaticResource SprintCalendarInfoIconBrush}" />
 
-                        <StackPanel
-                            Grid.Row="0"
-                            Grid.Column="1"
-                            Orientation="Horizontal">
+                            <TextBlock
+                                Grid.Column="1"
+                                VerticalAlignment="Center"
+                                TextWrapping="Wrap">
 
-                            <TextBlock VerticalAlignment="Center">
                                 <Run Text="{TemplateBinding HolidayName}" />
-                                <Run Text="-" />
                             </TextBlock>
 
                             <customControls:CountryFlagControl
+                                Grid.Column="2"
                                 BorderThickness="1"
                                 BorderBrush="{StaticResource BorderBrush}"
                                 Height="16"
                                 CountryCode="{TemplateBinding HolidayCountry}"
-                                Margin="5 0 0 0"/>
+                                Margin="15 0 0 0"
+                                VerticalAlignment="Top"
+                                ShowCountryCode="True"/>
 
-                        </StackPanel>
+                        </Grid>
 
                         <TextBlock
-                            Grid.Row="1"
-                            Grid.Column="0"
-                            Grid.ColumnSpan="2"
                             Margin="0 10 0 0"
                             Text="{TemplateBinding HolidayDescription}"
                             Visibility="{Binding HolidayDescription, RelativeSource={RelativeSource TemplatedParent}, Converter={StaticResource NullToVisibilityConverter}}"
                             TextWrapping="Wrap"
                             Foreground="{StaticResource FontDimBrush}"
                             FontSize="13" />
-                    </Grid>
+                    </DockPanel>
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
